pass build under windows